2000-07-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* adventure/done.c, adventure/main.c, adventure/subr.c, bcd/bcd.c,
	canfield/cfscores/cfscores.c, countmail/countmail.6,
	fortune/datfiles/fortunes, fortune/datfiles/fortunes2,
	fortune/datfiles/netbsd, gomoku/stoc.c, hack/hack.h,
	hunt/huntd/get_names.c, morse/morse.c, phantasia/Makefile.bsd,
	ppt/ppt.c, rogue/init.c, sail/Makefile.bsd, sail/lo_main.c,
	sail/pl_1.c, sail/pl_7.c, trek/computer.c, trek/destruct.c,
	trek/getpar.c, trek/setup.c, trek/torped.c: Update from NetBSD
	CVS.

2000-05-28  Joseph S. Myers  <jsm28@cam.ac.uk>

	* adventure/Makefile.bsd, adventure/main.c,
	arithmetic/arithmetic.c, atc/main.c, backgammon/backgammon/main.c,
	backgammon/teachgammon/teach.c, battlestar/battlestar.c,
	bcd/bcd.c, boggle/boggle/bog.c, caesar/caesar.c, caesar/rot13.in,
	canfield/canfield/canfield.c, canfield/cfscores/cfscores.c,
	cribbage/crib.c, fish/fish.c, fortune/datfiles/netbsd,
	gomoku/main.c, hack/hack.termcap.c, hangman/main.c, mille/mille.c,
	mille/misc.c, mille/print.c, monop/cards.inp, monop/monop.c,
	morse/morse.c, phantasia/Makefile.bsd, phantasia/fight.c,
	phantasia/misc.c, ppt/ppt.c, quiz/quiz.c, robots/main.c,
	robots/score.c, snake/snake/snake.c, snake/snscore/snscore.c,
	tetris/screen.c, tetris/screen.h, trek/main.c, worm/worm.c,
	wump/wump.c: Update from NetBSD CVS.

2000-05-27  Joseph S. Myers  <jsm28@cam.ac.uk>

	* wtf/acronyms: Update from NetBSD CVS.

2000-05-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* bsd-games now under CVS version control.  At present there is no
	anoncvs access, so this isn't particularly relevant to anyone else
	yet.  The CVS tree up to now has been generated with scripts based
	on RCS to include all past releases and betas from 1.3 onwards,
	and those snapshots of the bsd-games source tree from in between
	releases that I have, with checkin dates set to the dates of the
	ChangeLogs in the respective releases and snapshots.  Tags used